nginx-ingress-controller/testwebserver/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: nginx
spec:
  rules:
    - host: fredericofischer.ch
      http:
        paths:
          - backend:
              serviceName: nginx-service
              servicePort: 80
